# project7_DRF

./: .gitignore  README.md  pyproject.toml
config/: settings.py
users/migrations/: 0001_initial.py
vehicle/: admin.py  models.py  urls.py
vehicle/migrations/: 0001_initial.py  0002_moto.py
